Adding OpenAPI Documentation + Final version of openapi.yaml
Adding OpenAPI Documentation + Final version of openapi.yaml
